Improve consistency for the Manage Sightings delete dialog.
Give it an interior close button like other PlantShare dialogs. (#440)

--- a/gobotany/plantshare/templates/_delete_sighting.html
+++ b/gobotany/plantshare/templates/_delete_sighting.html
@@ -11,6 +11,8 @@
 
 {% block body_content %}
     <div>
+        <a class="close">Close</a>
+
         <h2>Are you sure you want to permanently delete this sighting?</h2>
 
         <table>
