--- a/gobotany/static/sass/_common.scss
+++ b/gobotany/static/sass/_common.scss
@@ -176,3 +176,15 @@ $disabled_orange_gradient: linear-gradient(
         top: 56px !important;
     }
 }
+
+@mixin dialog-close-button {
+    background: transparent url(/static/images/icons/close.png) no-repeat;
+    cursor: pointer;
+    display: block;
+    height: 16px;
+    position: absolute;
+    right: 15px;
+    text-indent: -9999px;
+    top: 15px;
+    width: 16px;
+}
