--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -18,7 +18,8 @@
     {% if sightings %}
         <p>{% user_first_name user %}, here
         {% if sightings|length > 1 %}
-            are the {{ sightings|length|intcomma }} sightings
+            <span class="showing">are all</span>
+            {{ sightings|length|intcomma }} sightings
         {% else %}
             is the sighting
         {% endif %}
