Show an appropriate button and confirmation when editing a sighting.
Show a Save button instead of the Post Sighting button, and
a Sighting Updated confirmation page instead of a Sighting
Posted confirmation page. (#440)

--- a/gobotany/plantshare/templates/edit_sighting.html
+++ b/gobotany/plantshare/templates/edit_sighting.html
@@ -24,7 +24,7 @@
 </div>
 
 <form method="post" action="{% url 'ps-sighting' sighting.id %}">
-    {% include "_sighting_form.html" %}
+    {% include "_sighting_form.html" with edit=True %}
 </form>
 
 {% endblock %}
