--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -53,5 +53,12 @@
             {% endif %}
         </div>
 
-        <input type="submit" class="post-sighting-btn"
-            alt="Post a Sighting">{# add class 'inactive' for disabled look #}
+        {# TODO: buttons: disable until input is ready to submit #}
+        {#                add class 'inactive' for disabled look #}
+        {% if edit %}
+            <input type="submit" class="save-btn" value="Save"
+                alt="Save Changes">
+        {% else %}
+            <input type="submit" class="post-sighting-btn"
+            alt="Post a Sighting">
+        {% endif %}
