Add Find People input box to main PlantShare page. (#441)

--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -14,6 +14,15 @@
 <h1>PlantShare</h1>
 
 {% if user.is_authenticated %}
+<div id="find-people">
+    <form method="get" action="{% url 'ps-find-people' %}">
+        <h2>Find People</h2>
+        <input type="text" placeholder="Enter person's name"
+            autocomplete="off" role="textbox" aria-autocomplete="list"
+            aria-haspopup="true">
+        <input type="button" value="Go">
+    </form>
+</div>
 <div class="profile box">
     <h2>Your Profile</h2>
     <a href="{% url 'ps-profile' %}" class="edit">Edit Profile</a>
