--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -17,7 +17,7 @@
 <div id="find-people">
     <form method="get" action="{% url 'ps-find-people' %}">
         <h2>Find People</h2>
-        <input type="text" placeholder="Enter person's name"
+        <input type="text" name="n" placeholder="Enter person's name"
             autocomplete="off" role="textbox" aria-autocomplete="list"
             aria-haspopup="true">
         <input type="button" value="Go">
