Clarify link title.

--- a/gobotany/plantshare/templates/new_checklist.html
+++ b/gobotany/plantshare/templates/new_checklist.html
@@ -39,7 +39,7 @@
                     </td><!-- /.date-posted -->
                     <td class="note">
                         <div class="note-field">{{ empty_form.note }}</div>
-                        <a href="#" class="note-link">Add<br>Note</a>
+                        <a href="#" class="note-link">Note</a>
                         <a href="#" class="close-btn row-btn">Close</a>
                     </td><!-- /.note -->
                 </tr>
