Revise some messages for Find People. (#441)

--- a/gobotany/plantshare/templates/find_people.html
+++ b/gobotany/plantshare/templates/find_people.html
@@ -48,10 +48,10 @@
         {% if name_query %}
             <p>No matches found.</p>
             {% if name_query|length < min_query_length %}
-                <p>Please try a longer search word.</p>
+                <p>Please try a longer word.</p>
             {% endif %}
         {% else %}
-            <p>Search for friends and colleagues who use PlantShare.</p>
+            <p>Find your friends and colleagues who use PlantShare.</p>
         {% endif %}
     {% endif %}
 
