Enable the submit button on the Find People page. (#441)

--- a/gobotany/plantshare/templates/find_people.html
+++ b/gobotany/plantshare/templates/find_people.html
@@ -7,7 +7,7 @@
     class="plantshare"{% endblock %}
 
 {% block js_require %}
-    //require(['plantshare/find_people']);
+    require(['plantshare/find_people']);
 {% endblock %}
 
 {% block main_content %}
