Enable submit button on Find People search boxes. (#441)

--- a/gobotany/plantshare/templates/find_people.html
+++ b/gobotany/plantshare/templates/find_people.html
@@ -21,7 +21,7 @@
             aria-haspopup="true"
             data-suggest-url="{% url 'ps-ajax-people-suggestions' %}?q=%s"
             data-align-menu-inside-input="true" data-submit-on-select="true">
-        <input type="button" value="Go">
+        <input type="submit" value="Go">
     </form>
 
     {% if people %}
