--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -248,7 +248,7 @@ body.plantshare {
                 padding: 0 2px 0 12px;
                 width: 309px;
             }
-            &[type='button'] {
+            &[type='submit'] {
                 background: transparent url(../images/layout/plantshare-btns.png) no-repeat -388px -4px;
                 border: 0 none;
                 display: block;
