--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -22,7 +22,7 @@
         aria-haspopup="true"
         data-suggest-url="{% url 'ps-ajax-people-suggestions' %}?q=%s"
         data-align-menu-inside-input="true" data-submit-on-select="true">
-    <input type="button" value="Go">
+    <input type="submit" value="Go">
 </form>
 <div class="profile box">
     <h2>Your Profile</h2>
