Update link label to Groups page.

--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -89,7 +89,7 @@
                                   <li>Sample Group B</li>
                                   <li>Hiker's Club</li>
                               </ul>
-                              <a href="#" class="edit-link">Go To My Groups</a></p>
+                              <a href="#" class="edit-link">Your Groups</a></p>
                           </div>
                       </td>
                   </tr>
