Add periods to messages.

--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -17,7 +17,7 @@
     <ul>
         <li>Create your own list of plants you have seen.</li>
         <li>Share checklists with friends, students, and colleagues.</li>
-        <li>To start a new list, click the "Create new list" button</li>
+        <li>To start a new list, click the "Create new list" button.</li>
     </li>
     <a class="ps-button" href="{% url 'ps-checklist-new' %}">Create New Checklist</a>
 </div>
@@ -56,7 +56,7 @@
         <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;width=600;height=180;" class="delete-btn inactive btn">Delete</a>
     </div><!-- /.form-actions -->
     {% else %}
-        <span>You currently have no checklists</span>
+        <span>You currently have no checklists.</span>
     {% endif %}
 </div><!-- /.ps-section -->
 {% endblock %}
