Fix console error due to module expecting a map.

--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -4,7 +4,7 @@
 {% block title %}Checklists: Plantshare{% endblock %}
 
 {% block js_require %}
-    require(['util/suggester_init', 'plantshare/plantshare']);
+    require(['util/suggester_init']);
 {% endblock %}
 
 {% block body_attributes %}id="checklists" class="plantshare checklists"{% endblock %}
